# AMW25

./: .gitignore  README.md  pyproject.toml  run.sh
amw25/: main.py
amw25/models/: lr.py  mlp.py  xgb.py
amw25/preprocess/: featurize_data.py  load_data.py  visualize.py
amw25/util/: parser.py  utils.py
data/: X_eval.csv  X_eval_mat.csv  X_test.csv  X_test_mat.csv  X_train.csv  X_train_mat.csv  scaler.pkl  y_eval.csv  y_test.csv  y_train.csv
data/prec/: X_train_test.csv  X_train_test_mat.csv  df_eval.csv  df_train_test.csv  raw_data.csv  rt.csv  rt_input.csv  rt_suffled.csv  rt_uniq_all.csv  rt_uniq_formula.csv  y_train_test.csv
data/unscaled/: X_eval.csv  X_eval_mat.csv  X_test.csv  X_test_mat.csv  X_train.csv  X_train_mat.csv  y_eval.csv  y_test.csv  y_train.csv
test/: DataToLoad.pkl  model_train2.ipynb  post.ipynb  xgb_data.pkl
test/mae_100/: xgb_data.pkl  xgbr_data.pkl
test/mat/: mat_eval.csv
test/sym/: mat_eval.pkl  mat_study.pkl
test/tot/: tot_data.pkl  tot_eval.csv
tutorial/: config.yaml  preprocess.ipynb  tutorial.ipynb  xgb_joblib.pkl
tutorial/mat/: mat_data.pkl
